feat: header parameters (#8)
* feat: header parameters

* chore: fixed a pr comment
